--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@selectquotelabs/sqform": "^4.5.3",
     "@selectquotelabs/sqhooks": "^1.4.0",
     "next": "10.1.3",
+    "next-auth": "^3.14.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.13.7",
