--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@material-ui/pickers": "^4.0.0-alpha.12",
     "@selectquotelabs/sqform": "^4.5.3",
     "@selectquotelabs/sqhooks": "^1.4.0",
+    "ag-grid-community": "^25.1.0",
+    "ag-grid-react": "^25.1.0",
     "next": "10.1.3",
     "next-auth": "^3.14.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.13.7",
+    "scplus-shared-components": "https://npm-public.selectquotelabs.com/scplus-shared-components/6.1.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
