--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
     "upgrade": "npm-check --update"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^4.0.0-alpha.12",
-    "@selectquotelabs/sqform": "^4.5.3",
+    "@selectquotelabs/sqform": "^4.5.6",
     "@selectquotelabs/sqhooks": "^1.4.0",
-    "ag-grid-community": "^25.1.0",
-    "ag-grid-react": "^25.1.0",
-    "next": "10.1.3",
-    "next-auth": "^3.15.4",
+    "ag-grid-community": "^25.2.0",
+    "ag-grid-react": "^25.2.0",
+    "next": "^10.2.0",
+    "next-auth": "^3.19.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.13.7",
+    "react-query": "^3.15.2",
     "scplus-shared-components": "https://npm-public.selectquotelabs.com/scplus-shared-components/6.1.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "eslint": "^7.24.0",
+    "eslint": "^7.25.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
